<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:alpha="0.8"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="194dp"
        android:layout_height="49dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/backgroud_bt"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/plant_part"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        android:alpha="0.7"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/backgroud_bt"
        android:fontFamily="monospace"
        android:hint="@string/login"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:paddingStart="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        tools:ignore="RtlSymmetry"
        android:alpha="0.7"/>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:fontFamily="monospace"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:paddingStart="15dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario"
        app:passwordToggleEnabled="false"
        android:textStyle="bold"
        android:alpha="0.7"
        tools:ignore="RtlSymmetry"
        android:background="@drawable/backgroud_bt"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35sp"
        app:layout_constraintTop_toBottomOf="@+id/et_senha"
        android:id="@+id/btn_login"
        android:background="@drawable/backgroud_bt"
        android:alpha="0.9"

        />

    <TextView
        android:id="@+id/tv_gmail"
        android:layout_width="277dp"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:alpha="0.7"
        android:background="@drawable/backgroud_bt"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/registre_se_com_o_gmail"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView

        android:layout_width="58dp"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:scrollbarSize="17dp"
        android:src="@drawable/gmail"
        app:layout_constraintEnd_toStartOf="@+id/tv_gmail"
        app:layout_constraintTop_toTopOf="@id/tv_gmail" />

    <TextView
        android:id="@+id/tv_facebook"
        android:layout_width="287dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:background="@drawable/backgroud_bt"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/registre_se_com_o_facebook"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gmail" />

    <ImageView

        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/facebook"
        android:scrollbarSize="17dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_facebook"
        app:layout_constraintTop_toTopOf="@id/tv_facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>