<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/minimalist"
    android:alpha="0.9"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView"
        android:layout_width="127dp"
        android:layout_height="20dp"
        android:backgroundTint="@color/black"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/plant_part"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <ImageView
        android:layout_width="144dp"
        android:layout_height="114dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:fontFamily="casual"
        android:hint="@string/login"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/ic_baseline_account_circle_24"
        android:backgroundTint="#131212"
        app:layout_constraintEnd_toStartOf="@+id/et_senha"
        tools:layout_editor_absoluteY="214dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="34dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_baseline_https_24"
        android:backgroundTint="#131212"
        app:layout_constraintEnd_toStartOf="@+id/et_senha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="283dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:fontFamily="casual"
        android:hint="@string/senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario"
        app:passwordToggleEnabled="false"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_login"
        android:layout_width="193dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/backgroud_bt"
        android:fontFamily="casual"
        android:text="@string/entrar"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha" />

    <TextView

        android:id="@+id/tv_gmail"
        android:layout_width="163dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="Esqueceu sua senha?"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_cadastro"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/backgroud_bt"
        android:fontFamily="casual"
        android:text="Cadastre-se"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_senha" />


</androidx.constraintlayout.widget.ConstraintLayout>